<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="329dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:height="50dp"
            android:autoText="true"
            android:autofillHints=""
            android:drawableLeft="@drawable/ic_baseline_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="238dp"
            android:contentDescription="Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/splashimage" />


        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="338dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:height="50dp"
            android:drawableLeft="@drawable/ic_baseline_password"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPersonName|textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

        <TextView
            android:id="@+id/regtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Do not have a account?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <TextView
            android:id="@+id/gtrLayout"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Register"
            android:textColor="#660AFF"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regtext"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>